--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,6 @@ jobs:
 
          - name: deploy terraform to aws
            run: terraform apply --auto-approve
+
+         - name: destroy terraform
+           run: terraform destroy --auto-approve
