--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
 name: Deploy terraform code to aws
 
 on:
-    push:
-        branches:
-            - main
+    schedule:
+      - cron: "23 5 * * *"
 
 jobs:
     deploy:
