--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Deploy terraform code to aws
 
 on:
-    schedule:
-      - cron: "*/5 * * * *"
+    pull_request:
+      branches:
+        - main
 
 jobs:
     deploy:
